src/objects/EMP_Training_assistan__c.object
<CustomObject>
    <fields>
        <fullName>Document_number__c</fullName>
        <label>Document number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_type__c</fullName>
        <label>Document type</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>EMP_Training__c</referenceTo>
        <relationshipLabel>Training</relationshipLabel>
        <relationshipName>EMP_Training_assistant_non_members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>EMP Training assistant non member</label>
    <nameField>
        <label>EMP_Training_assistant_non_member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMP Training assistant non members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>